2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_bind): Use sem_error to throw errors with line number
	info.

2011-10-24  Kaz Kylheku  <kaz@kylheku.com>

	Bugs #34641, #34629.

	* lib.c (search_str_tree): If multiple strings from the needle tree
	matching within within the haystack string, then take the leftmost
	match. If there are multiple matches at the same leftmost position,
	take the longest one.

2011-10-24  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (function_filter): New function.
	(get_filter): Handle (fun ...) syntax.

	* match.c (v_bind): Establish dynamic environment frame around
	dest_bind, and stash the bindings there so filters can have access 
	to the bindings.
	(v_output): Likewise, around do_output calls.
	(v_fun): New function.
	(match_files): Function handling broken out into v_fun.
	(match_funcall): New function.

	* match.h (match_funcall): Declared.

	* unwind.c (uw_push_env): Initialize match_context.
	(uw_get_match_context, uw_set_match_context): New functions.

	* unwind.h (struct uw_dynamic_env): New member, match_context.
	(uw_get_match_context, uw_set_match_context): Declared.

	* txr.1: Documented function filters.

2011-10-24  Kaz Kylheku  <kaz@kylheku.com>

	Turning attention to some plumbing.

	* unwind.c (uw_env_stack): New static variable.
	(uw_unwind_to_exit_point): Maintain correct uw_env_stack
	during unwinding.
	(uw_find_env): Just retrieve the env stack pointer; no search.
	(uw_push_env): Store a pointer to the previous
	environmental frame and just initialize the bindings to nil.
	No need to cons up a copy of the bindings from the previous frame.
	(uw_get_func): Perform a search through the environment stack.

	* unwind.h (struct uw_dynamic_env): New member, up_env.

2011-10-23  Kaz Kylheku  <kaz@kylheku.com>

	* tests/007/except-1.txr: Use next :list instead
	of piping from echo command. As a result, this test case should run on
	MingW.

2011-10-23  Kaz Kylheku  <kaz@kylheku.com>
