@@ -26,6 +26,7 @@
 
 extern val filters;
 extern val filter_k, lfilt_k, rfilt_k, to_html_k, from_html_k;
+extern val upcase_k, downcase_k, fun_k;
 
 val trie_lookup_begin(val trie);
 val trie_value_at(val node);
